<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/sign_in"
        android:key="sign_in_preference"
        android:summary="@string/sign_in_summary"
        android:title="@string/sign_in" />

    <Preference
        android:icon="@drawable/lock"
        android:key="password_preference"
        android:summary="@string/lock_password_setting_summary"
        android:title="@string/lock_password_setting" />

    <Preference
        android:enabled="false"
        android:icon="@drawable/back_up"
        android:key="back_up_preference"
        android:summary="@string/backup_summary"
        android:title="@string/backup" />

    <Preference
        android:icon="@drawable/sign_out"
        android:key="sign_out_preference"
        android:summary="@string/sign_out_summary"
        android:title="@string/sign_out" />

</PreferenceScreen>